# tts-podcast

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  TODO.md  fly.toml  personal-podcast-design.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_jobs.sql
backend/server/: Cargo.toml
backend/server/migrations/: 001_initial.sql  003_tts_progress.sql  004_summarize.sql  005_audio_bytes.sql  006_t3_hostname.sql  007_t3_hostname_fix.sql  011_sections.sql  012_summarize_focus.sql
backend/server/src/: config.rs  error.rs  ids.rs  main.rs  worker.rs
backend/server/src/pipeline/: clean.rs  describe.rs  image.rs  mod.rs  pdf.rs  scrape.rs  storage.rs  summarize.rs  tts.rs
backend/server/src/routes/: admin.rs  episodes.rs  feeds.rs  rss.rs
backend/src/: config.rs  db.rs  main.rs  worker.rs
backend/src/pipeline/: clean.rs  image.rs  mod.rs  pdf.rs  scrape.rs  storage.rs  tts.rs
backend/src/routes/: episodes.rs  feeds.rs  mod.rs  rss.rs
backend/tts-cli/: Cargo.toml
backend/tts-cli/src/: main.rs
backend/tts-lib/: Cargo.toml
backend/tts-lib/src/: claude.rs  clean.rs  gemini.rs  lib.rs  pdf.rs  pdf_gemini.rs  scrape.rs  summarize.rs  tts.rs
frontend/: package.json
frontend/src/: app.css  app.html
frontend/src/lib/: TextModal.svelte  Toast.svelte  api.test.ts  api.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/feeds/[token]/: +page.svelte
frontend/src/routes/feeds/[token]/episodes/[id]/: +page.svelte
scripts/: sync-secrets.sh
