[workspace]
members = ["tts-lib", "tts-cli", "server"]
resolver = "2"

[workspace.dependencies]
tts-lib = { path = "tts-lib" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["rustls", "json", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
base64 = "0.22"
bytes = "1"
