[package]
name = "tts-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
readability = "0.3"
scraper = "0.20"
ego-tree = "0.6"
url = "2"
mp3-duration = "0.1"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
